# Anvil

./: .gitattributes  .gitignore  .golangci.yml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  MEMORY_SYSTEM.md  NOTICE  README.md  SECURITY.md  install.ps1  install.sh  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
Anvil Plan/: AMENDMENT_A1_HARDENING_HISTORY.md  ANVIL_PLAN.md  ARTIFACT_SPECIFICATIONS.md  CHARTER_CONVERGENCE.md  CHARTER_HARDENING_HISTORY.md  PLAN_CONVERGENCE.md  PLAN_HARDENING_HISTORY.md  new_project_charter.md
Review Rounds/: REVIEW_CHARTER_R1.md  REVIEW_CHARTER_R3.md  REVIEW_CHARTER_R4.md  REVIEW_P0_BOOTSTRAP_R1.md  REVIEW_P10A_EVAL_METRICS_R1_Findings.md  REVIEW_P10A_EVAL_METRICS_R3.md  REVIEW_P10B_HINGE_FRAMEWORK_R1_Findings.md  REVIEW_P11_DOGFOODING_R10_Findings.md  REVIEW_P11_DOGFOODING_R12.md  REVIEW_P11_DOGFOODING_R1_Findings.md  REVIEW_P11_DOGFOODING_R3.md  REVIEW_P11_DOGFOODING_R3_Findings.md  REVIEW_P11_DOGFOODING_R4.md  REVIEW_P11_DOGFOODING_R4_Findings.md  REVIEW_P11_DOGFOODING_R6.md  REVIEW_P11_DOGFOODING_R7.md  REVIEW_P11_DOGFOODING_R7_Findings.md  REVIEW_P11_DOGFOODING_R8_Findings.md  REVIEW_P11_DOGFOODING_R9.md  REVIEW_P11_DOGFOODING_R9_Findings.md  REVIEW_P1_CONFIG_SCHEMA_CHARTER_LOADER_R1.md  REVIEW_P2_AUDIT_STORE_PROVENANCE_GRAPH_R1.md  REVIEW_P2_AUDIT_STORE_PROVENANCE_GRAPH_R2.md  REVIEW_P3A_CONTRACT_DEFINITION_R2.md  REVIEW_P3A_CONTRACT_DEFINITION_R2_Findings.md  REVIEW_P3A_CONTRACT_DEFINITION_R3.md  REVIEW_P3B_RUST_SIDECAR_CLIENT_R2_Findings.md  REVIEW_P3B_RUST_SIDECAR_CLIENT_R3.md  REVIEW_P3C_GO_SIDECAR_R1_Findings.md  REVIEW_P4_SETUP_WIZARD_R1_Findings.md  REVIEW_P4_SETUP_WIZARD_R2.md  REVIEW_P4_SETUP_WIZARD_R2_Findings.md  REVIEW_P4_SETUP_WIZARD_R3.md  REVIEW_P5_CHARTER_PIPELINE_R1.md  REVIEW_P5_CHARTER_PIPELINE_R1_Findings.md  REVIEW_P5_CHARTER_PIPELINE_R3.md  REVIEW_P6_MULTI_REVIEWER_ROTATION_R1_Findings.md  REVIEW_P6_MULTI_REVIEWER_ROTATION_R2.md  REVIEW_P6_MULTI_REVIEWER_ROTATION_R3_Findings.md  REVIEW_P7_PLAN_STAGE_PIPELINE_R1.md  (+18 more)
archive/old-v1/: buf.gen.yaml  justfile  rust-toolchain.toml
archive/old-v1/Anvil Plan/: AMENDMENT_A1_CONVERGENCE.md  CHARTER_AMENDMENT_A1.md  PHASE_REVIEW_WORKFLOW.md  PLAN_HARDENING_HISTORY.md
archive/old-v1/Review Rounds/: REVIEW_CHARTER_AMENDMENT_A1_R1.md  REVIEW_CHARTER_AMENDMENT_A1_R2.md  REVIEW_CHARTER_R2.md  REVIEW_P0_BOOTSTRAP_R2.md  REVIEW_P0_BOOTSTRAP_R3.md  REVIEW_P0_BOOTSTRAP_R4.md  REVIEW_P10A_EVAL_METRICS_R1.md  REVIEW_P10A_EVAL_METRICS_R2.md  REVIEW_P10A_EVAL_METRICS_R2_Findings.md  REVIEW_P10A_EVAL_METRICS_R3_Findings.md  REVIEW_P10B_HINGE_FRAMEWORK_R1.md  REVIEW_P10B_HINGE_FRAMEWORK_R1_Findings.md  REVIEW_P10B_HINGE_FRAMEWORK_R2.md  REVIEW_P10B_HINGE_FRAMEWORK_R2_Findings.md  REVIEW_P10B_HINGE_FRAMEWORK_R3.md  REVIEW_P10B_HINGE_FRAMEWORK_R3_Findings.md  REVIEW_P11_DOGFOODING_R1.md  REVIEW_P11_DOGFOODING_R10.md  REVIEW_P11_DOGFOODING_R11.md  REVIEW_P11_DOGFOODING_R11_Findings.md  REVIEW_P11_DOGFOODING_R12_Findings.md  REVIEW_P11_DOGFOODING_R13.md  REVIEW_P11_DOGFOODING_R13_Findings.md  REVIEW_P11_DOGFOODING_R14.md  REVIEW_P11_DOGFOODING_R14_Findings.md  REVIEW_P11_DOGFOODING_R15.md  REVIEW_P11_DOGFOODING_R15_Findings.md  REVIEW_P11_DOGFOODING_R16.md  REVIEW_P11_DOGFOODING_R2.md  REVIEW_P11_DOGFOODING_R2_Findings.md  REVIEW_P11_DOGFOODING_R3.md  REVIEW_P11_DOGFOODING_R5.md  REVIEW_P11_DOGFOODING_R5_Findings.md  REVIEW_P11_DOGFOODING_R6_Findings.md  REVIEW_P11_DOGFOODING_R8.md  REVIEW_P3A_CONTRACT_DEFINITION_R1.md  (+29 more)
archive/old-v1/crates/anvil-audit/: Cargo.toml
archive/old-v1/crates/anvil-audit/src/: index.rs  integrity.rs  records.rs  store.rs
archive/old-v1/crates/anvil-core/: Cargo.toml
archive/old-v1/crates/anvil-core/src/: charter.rs  config.rs  lib.rs  phase_briefing.rs  pipeline.rs  plan.rs  project.rs  sidecar.rs
archive/old-v1/crates/anvil-hinge/: Cargo.toml
archive/old-v1/crates/anvil-hinge/src/: lib.rs
archive/old-v1/crates/anvil-ship/: Cargo.toml
archive/old-v1/crates/anvil-ship/src/: lib.rs  rollback.rs  transport.rs
bench/: judge_calibration.toml
bench/fixtures/: README.md
contracts/: MODEL_FINDINGS.md  README.md  coder_local_base.md  coder_local_base_v2.md  coder_local_base_v3.md  coder_local_base_v4.md  coder_local_base_v5.md  exp_v4_act.md  exp_v4_act_verify.md  exp_v4_verify.md  reviewer_local_base.md  reviewer_local_live.md  reviewer_local_precision.md  system_map.md  tool_surface_local.md
crates/anvil-audit/: Cargo.toml
crates/anvil-cli/: Cargo.toml
crates/anvil-cli/src/: arbiter.rs  charter.rs  graph.rs  hinge.rs  main.rs  p11.rs  phase.rs  plan.rs  session.rs  setup.rs  ship.rs  status.rs
crates/anvil-core/: Cargo.toml
crates/anvil-core/src/: charter.rs  choices.rs  config.rs  diversity.rs  error.rs  lib.rs  phase_briefing.rs  pipeline.rs  plan.rs  project.rs  render.rs  rotation.rs
crates/anvil-eval/: Cargo.toml
crates/anvil-eval/src/: lib.rs
crates/anvil-graph/: Cargo.toml
crates/anvil-graph/src/: graph.rs  lib.rs  phase_graph.rs
crates/anvil-hinge/: Cargo.toml
crates/anvil-hinge/src/: lib.rs
crates/anvil-ship/: Cargo.toml
crates/anvil-sidecar-client/: Cargo.toml  build.rs
crates/anvil-sidecar-client/src/: client.rs  lib.rs
docs/: PLAN_dialects_build.md  PLAN_gemini_tool_adapter.md  ROADMAP_codex.md  ROADMAP_local_coder_tuning.md  ROADMAP_model_dialects.md  ROADMAP_subscriber_coder.md  ROADMAP_tool_dialect_bench.md  anvil_essay.md  anvil_feedback.md  anvil_move_over_essay.md  anvil_move_over_linkedin.md  anvil_move_over_x.md  anvil_polish_plan.md  contract.md  onboarding.md  runbook.md
docs/examples/: coordinator-attestation.md
proto/: README.md
releases/v1.0.0/: SHA256SUMS.txt
schemas/cli/: phase_build.json
scripts/: leaflog_phase_cycle.ps1
sidecar/: go.mod
src/: agent.rs  bench.rs  cli.rs  config.rs  contracts.rs  dialect.rs  git.rs  google_compat.rs  llm.rs  main.rs  modelsdev.rs  oauth.rs  phase.rs  plan.rs  reality.rs  repomap.rs  review_bench.rs  specialist.rs  state.rs  talk.rs  tools.rs  ui.rs  update.rs  websearch.rs
(+104 files in other folders)
