[workspace]
members = [
    "crates/anvil-cli",
    "crates/anvil-core",
    "crates/anvil-audit",
    "crates/anvil-graph",
    "crates/anvil-sidecar-client",
    "crates/anvil-eval",
    "crates/anvil-hinge",
    "crates/anvil-ship",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ai-nhancement/Anvil"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
