[package]
name = "anvil"
version = "0.3.6"
edition = "2021"
license = "Apache-2.0"
description = "Forge the Workflow — structure for vibe coding. A self-contained AI coding agent wrapped in a two-gate, cross-vendor review workflow. Model-agnostic; one binary."
repository = "https://github.com/ai-nhancement/Anvil"
readme = "README.md"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async + HTTP (direct provider calls, no sidecar)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"

# Config + data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Interactive UX
inquire = "0.7"
colored = "2"

# TUI (CLINE/Codex-style persistent chat + gates UI)
ratatui = { version = "0.29", features = ["crossterm", "unstable-rendered-line-info"] }
crossterm = "0.28"

# Credentials (keychain + env fallback)
keyring = { version = "3", features = ["linux-native"] }

# Image rendering (splash screen half-block technique)
image = { version = "0.25", default-features = false, features = ["png"] }

# Self-update: GitHub Releases backend + in-place self-replacement
# (powers `anvil update`, the TUI /update command, and the boot update check).
self_update = { version = "0.41", default-features = false, features = [
    "rustls",
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
] }

# Errors and utils
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
