[package]
name = "anvil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Anvil workflow CLI"

[[bin]]
name = "anvil"
path = "src/main.rs"

[dependencies]
anvil-core = { path = "../anvil-core" }
clap = { version = "4", features = ["derive"] }

[lints]
workspace = true
