[package]
name = "anvil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Anvil workflow CLI"

[[bin]]
name = "anvil"
path = "src/main.rs"

[dependencies]
anvil-core = { path = "../anvil-core" }
anvil-audit = { path = "../anvil-audit" }
anvil-graph = { path = "../anvil-graph" }
anvil-sidecar-client = { path = "../anvil-sidecar-client" }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
keyring = "3"
tokio = { version = "1", features = ["rt", "time"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
