[package]
name = "anvil-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Anvil evaluation metrics and alert engine"

[dependencies]
anvil-audit = { path = "../anvil-audit" }
anvil-core = { path = "../anvil-core" }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
