[package]
name = "anvil-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Anvil provenance and dependency graph"

[lints]
workspace = true

[dependencies]
anvil-core = { path = "../anvil-core" }
anvil-audit = { path = "../anvil-audit" }
serde_json = "1"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
