[package]
name = "anvil-sidecar-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Anvil gRPC client for the model-adapter sidecar"

[dependencies]
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true
