[package]
name = "anvil-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Anvil filesystem audit store"

[lints]
workspace = true

[dependencies]
anvil-core = { path = "../anvil-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
