[package]
name = "anvil-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Anvil Vault library — state machine, policy enforcement, App-consumable API"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
