[package]
name = "anvil-ship"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Anvil transport and rollback"

[lints]
workspace = true

[dependencies]
anvil-core = { path = "../anvil-core" }
anvil-audit = { path = "../anvil-audit" }
anvil-graph = { path = "../anvil-graph" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[dependencies.chrono]
version = "0.4"
features = ["serde"]
